2004-07-27  Richard Sandiford  <rsandifo@redhat.com>

	* expr.h (canonicalize_condition, get_condition): Add an int argument.
	* gcse.c (fis_get_condition): Reimplement using get_condition, leaving
	it to check whether the condition is still valid at the jump insn.
	* ifcvt.c (noce_get_condition): Likewise.
	(noce_get_alt_condition): Update call to canonicalize_condition.
	* loop-iv.c (simplify_using_initial_values): Update call to
	get_condition.  Remove FIXME.
	(check_simple_exit): Update call to get_condition.
	* loop-unswitch.c (may_unswitch_on): Likewise.
	* loop.c (check_dbra_loop): Likewise.
	(canonicalize_condition, get_condition): Add an argument to say whether
	the condition must still be valid at INSN.
	(get_condition_for_loop): Update call to get_condition.  Require that
	the condition be valid at INSN.
	* predict.c (estimate_probability): Update call to get_condition.
	Remove unused earliest parameter.
	(expected_value_to_br_prob): Update call to canonicalize_condition.

2004-07-26  Eric Christopher  <echristo@redhat.com>

	* tree-dfa.c (add_referenced_var): Register initializers of global
	variables.

2004-07-26  Paolo Bonzini  <bonzini@gnu.org>

        * config/i386/i386.c (function_arg): Always treat 8-
        and 16-byte wide vectors the same, even if MMX/SSE
        are disabled.
        (contains_128bit_aligned_vector_p): Add comment.

2004-07-26  J"orn Rennecke <joern.rennecke@superh.com>

	* ra.h (enum node_type): Rename to:
	(enum ra_node_type).
	* ra-colorize.c: Likewise.

2004-07-26  Richard Sandiford  <rsandifo@redhat.com>

	* cfgcleanup.c (try_simplify_condjump): Call update_forwarder_flag
	after simplifying the jump.

2004-06-26  Richard Henderson  <rth@redhat.com>

	* calls.c (combine_pending_stack_adjustment_and_call): Make
	preferred_unit_stack_boundary argument unsigned.  Make
	unadjusted_alignment unsigned.
	(expand_call): Make preferred_stack_boundary and
	preferred_unit_stack_boundary variables unsigned.