@@ -1,3 +1,7 @@
+2004-07-27  Diego Novillo  <dnovillo@redhat.com>
+
+	* gcc.c-torture/compile/20040727-1.c: New test.
+
 2004-07-26  Eric Christopher  <echristo@redhat.com>
 
 	* gcc.c-torture/compile/20040726-2.c: New test.
